# SPHERE-I-SCIENCE

./: CITATION.cff  README.md  requirements.txt  streamlit_app.py
S6 — 🌍 Ecology & Environmental Science/S6-A - K-EcoLOGIC Lab/S6-A-R1 - SortSmart Ukraine/R1a-sortsmart-ukraine/: .gitignore  GCP_SETUP.md  README.md  execution_trace.ipynb  pyproject.toml  report.md  run_local.ps1  setup_bigquery.ps1
S6 — 🌍 Ecology & Environmental Science/S6-A - K-EcoLOGIC Lab/S6-A-R1 - SortSmart Ukraine/R1a-sortsmart-ukraine/dashboard/: activist_logic.py  app.py  common.py  kecologic_common.py  sorting_logic.py
S6 — 🌍 Ecology & Environmental Science/S6-A - K-EcoLOGIC Lab/S6-A-R1 - SortSmart Ukraine/R1a-sortsmart-ukraine/dashboard/pages/: 1_SortSmart_Ukraine.py  2_Air_Exposure.py  3_Water_Watch.py  4_Polluters_Permits.py  5_Radiation_Risk.py  6_Packaging_Sorting_Guide.py  7_AI_Activist_Mode.py  7_Environmental_Briefs.py  8_Sorting_Assistant.py  (+1 more)
S6 — 🌍 Ecology & Environmental Science/S6-A - K-EcoLOGIC Lab/S6-A-R1 - SortSmart Ukraine/R1a-sortsmart-ukraine/dbt/: dbt_project.yml  profiles.example.yml  profiles.yml.example
S6 — 🌍 Ecology & Environmental Science/S6-A - K-EcoLOGIC Lab/S6-A-R1 - SortSmart Ukraine/R1a-sortsmart-ukraine/infra/: main.tf  terraform.tfvars.example  variables.tf
S6 — 🌍 Ecology & Environmental Science/S6-A - K-EcoLOGIC Lab/S6-A-R1 - SortSmart Ukraine/R1a-sortsmart-ukraine/kestra/: sortsmart_ukraine.yml
S6 — 🌍 Ecology & Environmental Science/S6-A - K-EcoLOGIC Lab/S6-A-R1 - SortSmart Ukraine/R1a-sortsmart-ukraine/tests/: test_normalization.py
deploy/: README.md  (+1 more)
(+422 files in other folders)
