[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sortsmart-ukraine"
version = "0.1.0"
description = "Nationwide waste-sorting readiness and climate impact project for DataTalksClub DE Zoomcamp"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
